package com.sbnvw.artemis.animal_kingdom.traits.diet;

/**
 *
 * @author Marcel van Wilgenburg
 */
public interface Diet {
    
    String diet();
    
    
}
