package com.sbnvw.artemis.animal_kingdom.traits.diet;

/**
 *
 * @author Marcel van Wilgenburg
 */
public class Eats_Meat implements Diet{

    @Override
    public String diet() {
        return "Eats Meat";
    }
    
}
