/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.sbnvw.artemis.animal_kingdom.traits.fur;

/**
 *
 * @author gl503vd-fy127t
 */
public class Feathers implements Fur {

    @Override
    public String fur() {
        return "has feathers";
        
        
        
    }
    
    
    
    
    
    
    
}
