package com.sbnvw.artemis.animal_kingdom.traits.fur;

/**
 *
 * @author Marcel van Wilgenburg
 */
public interface Fur {

    String fur();

}
