package com.sbnvw.artemis.animal_kingdom.treeOfLife.Birds.parrots;

import com.sbnvw.artemis.animal_kingdom.treeOfLife.Birds.Birds;

/**
 *
 * @author Marcel van Wilgenburg
 */
public class Parrots extends Birds{
    
    public Parrots(String name) {
        super(name);
    }
    
}
