package com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds;

import com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate;

/**
 *
 * @author Marcel van Wilgenburg
 */
public abstract class Birds extends Chordate {

    public Birds(String name) {
        super(name);
    }

}
