package com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate;

import com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal;

/**
 *
 * @author Marcel van Wilgenburg
 */
public abstract class Chordate extends Animal{
    
    public Chordate(String name) {
        super(name);
    }
    
}
