package com.sbnvw.artemis.io;

/**
 *
 * @author Marcel van Wilgenburg
 */
public class IOReader {
    
}
