package quiz;

/**
 *
 * @author Donovan Schaafsma
 *
 * This interface will provide the component role in the Composite design
 * pattern. It will include methods for the composite and leafs.
 */
public interface Quiz {

    public void questionTypeName(String name);

}
