@startuml
abstract class com.sbnvw.artemis.account.UserInformation
abstract class com.sbnvw.artemis.account.UserLogin
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.Birds
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.parrots.Parrots
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.actinopterygii.Actinopterygii
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.Mammalia
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.Canidae
abstract class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.Cats
class com.sbnvw.artemis.MainApp
class com.sbnvw.artemis.account.AccountFactory
class com.sbnvw.artemis.account.Administrator
class com.sbnvw.artemis.account.Guest
class com.sbnvw.artemis.account.SystemAdministrator
class com.sbnvw.artemis.account.User
class com.sbnvw.artemis.animal_kingdom.traits.diet.Eats_Meat
class com.sbnvw.artemis.animal_kingdom.traits.diet.Eats_Plants
class com.sbnvw.artemis.animal_kingdom.traits.fur.Feathers
class com.sbnvw.artemis.animal_kingdom.traits.fur.Long_Hear
class com.sbnvw.artemis.animal_kingdom.traits.fur.Short_Hear
class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.parrots.oldWorldParrots.OldWorldParrots
class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.actinopterygii.salmonidae.Salmonidae
class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.dogs.Dog
class com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.smallCats.Cat
class com.sbnvw.artemis.controllers.AdminMenuController
class com.sbnvw.artemis.controllers.LoginPageController
class com.sbnvw.artemis.controllers.MainSearchWindowController
class com.sbnvw.artemis.controllers.MainWindowController
class com.sbnvw.artemis.controllers.MakeAnimalPageController
class com.sbnvw.artemis.controllers.PreviewWindowController
class com.sbnvw.artemis.io.IOReader
class com.sbnvw.artemis.io.IOWriter
class com.sbnvw.artemis.quiz.Question
class com.sbnvw.artemis.quiz.QuestionGroup
interface com.sbnvw.artemis.account.ArticleManagement
interface com.sbnvw.artemis.account.GetAccount
interface com.sbnvw.artemis.account.UserManagement
interface com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
interface com.sbnvw.artemis.animal_kingdom.traits.fur.Fur
interface com.sbnvw.artemis.quiz.Quiz
com.sbnvw.artemis.account.UserInformation --|> com.sbnvw.artemis.account.UserLogin
com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal ..> com.sbnvw.artemis.io.IOWriter
com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal ..> com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal ..> com.sbnvw.artemis.animal_kingdom.traits.fur.Fur
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.Birds --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.parrots.Parrots --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.Birds
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.actinopterygii.Actinopterygii --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.Mammalia --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Chordate
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.Mammalia
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora ..> com.sbnvw.artemis.animal_kingdom.traits.diet.Eats_Meat
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora ..> com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.Canidae --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.Cats --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.Carnivora
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.Cats ..> com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
com.sbnvw.artemis.MainApp ..> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.smallCats.Cat
com.sbnvw.artemis.MainApp ..> com.sbnvw.artemis.controllers.MainSearchWindowController
com.sbnvw.artemis.MainApp ..> com.sbnvw.artemis.controllers.MainWindowController
com.sbnvw.artemis.account.Administrator --|> com.sbnvw.artemis.account.UserInformation
com.sbnvw.artemis.account.Administrator --|> com.sbnvw.artemis.account.ArticleManagement
com.sbnvw.artemis.account.Administrator --|> com.sbnvw.artemis.account.GetAccount
com.sbnvw.artemis.account.Administrator --|> com.sbnvw.artemis.account.UserManagement
com.sbnvw.artemis.account.Guest --|> com.sbnvw.artemis.account.UserLogin
com.sbnvw.artemis.account.Guest --|> com.sbnvw.artemis.account.ArticleManagement
com.sbnvw.artemis.account.Guest --|> com.sbnvw.artemis.account.GetAccount
com.sbnvw.artemis.account.SystemAdministrator --|> com.sbnvw.artemis.account.UserInformation
com.sbnvw.artemis.account.SystemAdministrator --|> com.sbnvw.artemis.account.GetAccount
com.sbnvw.artemis.account.SystemAdministrator --|> com.sbnvw.artemis.account.UserManagement
com.sbnvw.artemis.account.User --|> com.sbnvw.artemis.account.UserInformation
com.sbnvw.artemis.account.User --|> com.sbnvw.artemis.account.ArticleManagement
com.sbnvw.artemis.account.User --|> com.sbnvw.artemis.account.GetAccount
com.sbnvw.artemis.account.User --|> com.sbnvw.artemis.account.UserManagement
com.sbnvw.artemis.animal_kingdom.traits.diet.Eats_Meat --|> com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
com.sbnvw.artemis.animal_kingdom.traits.diet.Eats_Plants --|> com.sbnvw.artemis.animal_kingdom.traits.diet.Diet
com.sbnvw.artemis.animal_kingdom.traits.fur.Feathers --|> com.sbnvw.artemis.animal_kingdom.traits.fur.Fur
com.sbnvw.artemis.animal_kingdom.traits.fur.Long_Hear --|> com.sbnvw.artemis.animal_kingdom.traits.fur.Fur
com.sbnvw.artemis.animal_kingdom.traits.fur.Short_Hear --|> com.sbnvw.artemis.animal_kingdom.traits.fur.Fur
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.parrots.oldWorldParrots.OldWorldParrots --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.Birds.parrots.Parrots
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.actinopterygii.salmonidae.Salmonidae --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.actinopterygii.Actinopterygii
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.dogs.Dog --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.Canidae
com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.smallCats.Cat --|> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.Cats
com.sbnvw.artemis.controllers.LoginPageController ..> com.sbnvw.artemis.MainApp
com.sbnvw.artemis.controllers.MainSearchWindowController ..> com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal
com.sbnvw.artemis.controllers.MainSearchWindowController ..> com.sbnvw.artemis.MainApp
com.sbnvw.artemis.controllers.MainSearchWindowController ..> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.canidae.dogs.Dog
com.sbnvw.artemis.controllers.MainSearchWindowController ..> com.sbnvw.artemis.animal_kingdom.treeOfLife.chordate.mammalia.carnivora.cats.smallCats.Cat
com.sbnvw.artemis.controllers.MainWindowController ..> com.sbnvw.artemis.MainApp
com.sbnvw.artemis.io.IOWriter ..> com.sbnvw.artemis.animal_kingdom.treeOfLife.Animal
com.sbnvw.artemis.quiz.Question --|> com.sbnvw.artemis.quiz.Quiz
com.sbnvw.artemis.quiz.QuestionGroup --|> com.sbnvw.artemis.quiz.Quiz
@enduml